# csv-parser

./: .gitignore  README.md  main.py  parsers.py  pyproject.toml
tests/: test_main.py
tests/fixtures/: expected.txt
