[project]
name = "csv-parser"
version = "1.0.0"
description = "A CLI tool that compares CSV files and generates reports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]
